--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/master.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <title>Dropbox</title>
 </head>
 <body>
 
@@ -13,6 +17,13 @@
     <!-- Strutturazione header e jumbotron -->
     <header>
         <header class="topbar">
+            <div class="container-topbar">
+                <div class="right stuff">
+                    <img src="../htmlcss-dropbox/img (22)/img/logo-small.png" alt="">
+                   
+                </div>
+
+            </div>
 
         </header>
         <header class="jumbotron">
@@ -74,7 +85,7 @@
         </footer>
 
         <footer class="down">
-            
+
         </footer>
     </footer>
 
