--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
 
         </header>
         <header class="jumbotron">
+            <div class="jumbotron-container">
+                <div class="jb-text">
+                    <h1>
+                        Tutto ci&ograve; che ti serve per il lavoro, in un unico posto
+                    </h1>
+                </div>
+                <div class="jb-img">
+                    <div class="jb-col1">
+
+                    </div>
+                    <div class="jb-col2">
+                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-coordinate-it.png" alt="">
+                    </div>
+                </div>
+
+            </div>
 
         </header>
     </header>
