Strutturazione prima sezione main

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                     </div>
                     <div class="jb-col2">
-                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-coordinate-it.png" alt="">
+                        <!-- <img src="../htmlcss-dropbox/img (22)/img/jumbo.png" alt=""> -->
                     </div>
                 </div>
 
@@ -52,7 +52,25 @@
     <main>
         <!-- Prima sezione piani a pagamento -->
         <section>
+            <div class="first section-container">
+                <h2>
+                    Trova il piano business che fa per te
+                </h2>
+                <span> <input type="checkbox">Fatturazione mensile</span>
+                <span><input type="checkbox">Fatturazione annulae</span>
 
+                <div class="subscription-plans">
+                    <div class="plan-col1">
+
+                    </div>
+                    <div class="plan-col2">
+
+                    </div>
+                    <div class="plan-col3">
+                        
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- Seconda sezione "Enterprise" -->
