struttura seconda sezione main

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                 <span><input type="checkbox">Fatturazione annulae</span>
 
                 <div class="subscription-plans">
-                    <div class="plan-col1">
+                    <div class="plan-col 1">
 
                     </div>
-                    <div class="plan-col2">
+                    <div class="plan-col 2">
 
                     </div>
-                    <div class="plan-col3">
-                        
+                    <div class="plan-col 3">
+
                     </div>
                 </div>
             </div>
@@ -75,7 +75,14 @@
 
         <!-- Seconda sezione "Enterprise" -->
         <section>
+            <div class="second section-container">
+                <div class="ss-text">
 
+                </div>
+                <a href="ufficio vendite">
+                    
+                </a>
+            </div>
         </section>
 
         <!-- Terza sezione "Partnership" -->
