terza sezione main

--- a/index.html
+++ b/index.html
@@ -80,14 +80,21 @@
 
                 </div>
                 <a href="ufficio vendite">
-                    
+
                 </a>
             </div>
         </section>
 
         <!-- Terza sezione "Partnership" -->
         <section>
+            <div class="third section-container">
+                <div class="t-col1">
 
+                </div>
+                <div class="t-col2">
+                    
+                </div>
+            </div>
         </section>
 
         <!-- Quarta sezione "Operazioni Dropbox Business" -->
