--- a/index.html
+++ b/index.html
@@ -99,12 +99,31 @@
 
         <!-- Quarta sezione "Operazioni Dropbox Business" -->
         <section>
-
+            <div class="fourth section-container">
+                <h2>
+                    Esegui pi&ugrave; operazioni con Dropbox Business
+                </h2>
+                <div class="cards-line1">
+                    <div class="card1"></div>
+                    <div class="card2"></div>
+                    <div class="card3"></div>
+                </div>
+                <div class="cards-line2">
+                    <div class="card4"></div>
+                    <div class="card5"></div>
+                    <div class="card6"></div>
+                </div>
+            </div>
         </section>
 
         <!-- Quinta sezione "Team" -->
         <section>
+            <div class="fifth section-container">
+                <h2>
 
+                </h2>
+                <a href=""></a>
+            </div>
         </section>
 
         <!-- Sesta sezione "Designit/Asu ecc" -->
