--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
             <div class="container-topbar">
                 <div class="right stuff">
                     <img src="../htmlcss-dropbox/img (22)/img/logo-small.png" alt="">
-                   
+                   <a href="pd">Perch&eacute; Dropbox</a>
+                   <a href="pd">Funzioni</a>
+                   <a href="pd">Piani e prezzi</a>
+                </div>
+                <div class="left-stuff">
+                    <a id="supporto" href="pd">Supporto</a>
+                    <a href="pd">Contatta l&apos; ufficio vendite</a>
+                    <a href="pd">Accedi</a>
+                    <a id="inizia" href="pd">Inizia</a>
                 </div>
 
             </div>
@@ -35,10 +43,15 @@
                 </div>
                 <div class="jb-img">
                     <div class="jb-col1">
-
+                        <p>
+                            Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business &egrave; pi&ugrave; di uno spazio di archiviazione sicuro&#8282; &egrave; un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                        </p>
+                        <a id="inizia" href="">Inizia la tua prova gratuita</a>
+                        <div>Annulla in qualsiasi momento</div>
+                        <a href="#ancora" id="arrow"><i class="fa-solid fa-arrow-down"></i></a> 
                     </div>
                     <div class="jb-col2">
-                        <!-- <img src="../htmlcss-dropbox/img (22)/img/jumbo.png" alt=""> -->
+                        <img src="../htmlcss-dropbox/img (22)/img/jumbo.png" alt="">
                     </div>
                 </div>
 
@@ -51,7 +64,7 @@
     <!-- Struttura main con le varie sezioni -->
     <main>
         <!-- Prima sezione piani a pagamento -->
-        <section>
+        <section id="ancora">
             <div class="first section-container">
                 <h2>
                     Trova il piano business che fa per te
