--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <h2>
                     Trova il piano business che fa per te
                 </h2>
-                <span> <input type="checkbox">Fatturazione mensile</span>
-                <span><input type="checkbox">Fatturazione annulae</span>
+                <label> <input type="checkbox">Fatturazione mensile</label>
+                <label><input type="checkbox">Fatturazione annuale</label>
 
                 <div class="subscription-plans">
                     <div class="plan-col 1">
