--- a/index.html
+++ b/index.html
@@ -77,14 +77,202 @@
                         <div class="intestazione">
                             <span id="icon-plan"><i class="fa-solid fa-user"></i></span>
                             <span>Singolo</span>
-                            <!-- <hr> -->
+                        </div>
+                        <div class="contenuto-col">
+                            <div class="plan-name">
+                                <ul class="list-col">
+                                    <li>
+                                        <h3>Professional</h3>
+                                    </li>
+                                    <li>
+                                        &euro; 12.00
+                                    </li>
+                                    <li>
+                                        /mese
+                                    </li>
+                                    <li></li>
+                                </ul>
+                            </div>
+                            <div class="pacchetto">
+                                <ul>
+                                    <li>
+                                        <i class="fa-solid fa-user"></i>
+                                        <span>1 utente</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-folder"></i>
+                                        <span>5 TB di spazio di archiviazione sicuro</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-share-nodes"></i>
+                                        <span>
+                                            Funzioni di produttivit&agrave; premium e condivisione file semplice e sicura
+                                        </span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="prova">
+                                <a id="inizia" href="">Prova gratis per 30 giorni</a>
+                            </div>
+                            <div class="punti-salienti">
+                                <ul>
+                                    <li>
+                                        <h4>Punti salienti del piano</h4>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i>
+                                        <span>Invia file fino a 100gb con Dropbox Transfert</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i>
+                                        <span>
+                                            Cartelle offline su dispositivi mobili
+                                        </span>
+                                    </li>
+                                </ul>
+                            </div>
+
                         </div>
                     </div>
-                    <div class="plan-col2">
 
+                    <div class="plan-col2">
+                        <div class="intestazione">
+                            <span id="icon-plan"><i class="fa-solid fa-users"></i></span>
+                            <span>Team</span>
+                        </div>
+                        <div class="contenuto-col">
+                            <div class="plan-name">
+                                <ul class="list-col">
+                                    <li>
+                                        <h3>Advanced</h3>
+                                    </li>
+                                    <li>
+                                        &euro; 18.00
+                                    </li>
+                                    <li>
+                                        /utente/mese
+                                    </li>
+                                    <li></li>
+                                </ul>
+                            </div>
+                            <div class="pacchetto">
+                                <ul>
+                                    <li>
+                                        <i class="fa-solid fa-users"></i>
+                                        <span>3 o pi&ugrave; utenti</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-folder"></i>
+                                        <span>Tutto lo spazio di cui ha bisgono il tuo team</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-share-nodes"></i>
+                                        <span>
+                                            Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
+                                        </span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="prova">
+                                <a id="inizia" href="">Prova gratis per 30 giorni</a>
+                            </div>
+                            <div class="punti-salienti">
+                                <ul>
+                                    <li>
+                                        <h4>Punti salienti del piano</h4>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i>
+                                        <span>Nessun limite di spazio per i file</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i>
+                                        <span>
+                                            Cartelle offline su dispositivi mobili
+                                        </span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i>
+                                        <span>Risparmio del 50&percnt; rispetto ale iscrizioni singole</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i>
+                                        <span>Possibilit&agrave; di inserire nuovi membri del team</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i>
+                                        <span>Gestione dei permessi in base ai ruoli</span>
+                                    </li>
+
+                                </ul>
+                            </div>
+
+                        </div>
                     </div>
                     <div class="plan-col3">
+                        <div class="intestazione">
+                            <span id="icon-plan"><i class="fa-solid fa-building"></i></span>
+                            <span>Azienda</span>
+                        </div>
+                        <div class="contenuto-col">
+                            <div class="plan-name">
+                                <ul class="list-col">
+                                    <li>
+                                        <h3>Enterprise</h3>
+                                    </li>
+                                    <li>
+                                        Contattaci
+                                    </li>
+                                    <li>
+                                        /mese
+                                    </li>
+                                    <li></li>
+                                </ul>
+                            </div>
+                            <div class="pacchetto">
+                                <ul>
+                                    <li>
+                                        <i class="fa-solid fa-user"></i>
+                                        <span>10 o pi&ugrave; utenti</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-folder"></i>
+                                        <span>Soluzioni personalizzabili per la tua azienda</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-share-nodes"></i>
+                                        <span>
+                                            Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala
+                                        </span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="prova">
+                                <a id="inizia" href="">Contattaci</a>
+                            </div>
+                            <div class="punti-salienti">
+                                <ul>
+                                    <li>
+                                        <h4>Punti salienti del piano</h4>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i>
+                                        <span>
+                                            Cartelle offline su dispositivi mobili
+                                        </span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i>
+                                        <span>Servizio assistenza 24/h</span>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-check"></i>
+                                        <span>Possibilità di personalizzazione totale</span>
+                                    </li>
+                                </ul>
+                            </div>
 
+                        </div>
                     </div>
                 </div>
             </div>
@@ -93,12 +281,22 @@
         <!-- Seconda sezione "Enterprise" -->
         <section>
             <div class="second section-container">
-                <div class="ss-text">
+                <div class="intestazione2">
+                    <span id="icon-plan"><i class="fa-solid fa-building"></i></span>
+                    <span>Team</span>
+                </div>
+                <div class="content">
+                    <div class="cont-text">
+                        <h3>Enterprise</h3>
+                        <p id="first-p">Contatta l'ufficio vendite per i prezzi</p>
+                        <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
+                    </div>
+
+                    <div class="ufficio-vendite">
+                        <a id="inizia" href="">Contatta l&apos;ufficio vendite</a>
+                    </div>
 
                 </div>
-                <a href="ufficio vendite">
-
-                </a>
             </div>
         </section>
 
