Completamento quinta sezione

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 </ul>
                             </div>
                             <div class="prova">
-                                <a id="inizia" href="">Prova gratis per 30 giorni</a>
+                                <a id="box-button" href="">Prova gratis per 30 giorni</a>
                             </div>
                             <div class="punti-salienti">
                                 <ul>
@@ -174,7 +174,7 @@
                                 </ul>
                             </div>
                             <div class="prova">
-                                <a id="inizia" href="">Prova gratis per 30 giorni</a>
+                                <a id="box-button" href="">Prova gratis per 30 giorni</a>
                             </div>
                             <div class="punti-salienti">
                                 <ul>
@@ -248,7 +248,7 @@
                                 </ul>
                             </div>
                             <div class="prova">
-                                <a id="inizia" href="">Contattaci</a>
+                                <a id="box-button" href="">Contattaci</a>
                             </div>
                             <div class="punti-salienti">
                                 <ul>
@@ -327,14 +327,62 @@
                     Esegui pi&ugrave; operazioni con Dropbox Business
                 </h2>
                 <div class="cards-line1">
-                    <div class="card1"></div>
-                    <div class="card2"></div>
-                    <div class="card3"></div>
+                    <div class="card">
+                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-switching-tools.png" alt="">
+                        <h4>
+                            Passa di meno da uno strumento all&apos;altro
+                        </h4>
+                        <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox. 
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-send-files-it.png" alt="">
+                        <h4>
+                            Passa di meno da uno strumento all&apos;altro
+                        </h4>
+                        <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox. 
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-coordinate-it.png" alt="">
+                        <h4>
+                            Passa di meno da uno strumento all&apos;altro
+                        </h4>
+                        <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox. 
+                        </p>
+                    </div>
                 </div>
                 <div class="cards-line2">
-                    <div class="card4"></div>
-                    <div class="card5"></div>
-                    <div class="card6"></div>
+                    <div class="card">
+                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-integrations-it.png" alt="">
+                        <h4>
+                            Passa di meno da uno strumento all&apos;altro
+                        </h4>
+                        <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox. 
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-multi-device.png" alt="">
+                        <h4>
+                            Passa di meno da uno strumento all&apos;altro
+                        </h4>
+                        <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox. 
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-security.png" alt="">
+                        <h4>
+                            Passa di meno da uno strumento all&apos;altro
+                        </h4>
+                        <p>
+                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox. 
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -343,15 +391,17 @@
         <section>
             <div class="fifth section-container">
                 <h2>
-
+                    Pi&ugrave; di 500.000 utilizzano Dropbox Business
                 </h2>
-                <a href=""></a>
+                <a href="">Scopri di pi&ugrave; sui nostri clienti</a>
             </div>
         </section>
 
         <!-- Sesta sezione "Designit/Asu ecc" -->
         <section>
-
+            <div class="sixth section-container">
+                
+            </div>
         </section>
 
         <!-- Settima sezione "Dropbox nella tua azienda" -->
