Prova sesta sezione

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
     <!-- Struttura main con le varie sezioni -->
     <main>
-        <!-- Prima sezione piani a pagamento -->
+        <div class="main-container">
+            <!-- Prima sezione piani a pagamento -->
         <section id="ancora">
             <div class="first section-container">
                 <h2>
@@ -248,7 +249,7 @@
                                 </ul>
                             </div>
                             <div class="prova">
-                                <a id="box-button" href="">Contattaci</a>
+                                <a id="box-button-c" href="">Contattaci</a>
                             </div>
                             <div class="punti-salienti">
                                 <ul>
@@ -400,7 +401,7 @@
         <!-- Sesta sezione "Designit/Asu ecc" -->
         <section>
             <div class="sixth section-container">
-                
+
             </div>
         </section>
 
@@ -413,6 +414,8 @@
         <section>
 
         </section>
+        </div>
+        
 
     </main>
 
