Correzioni generali codice su widht e margin

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <main>
         <div class="main-container">
             <!-- Prima sezione piani a pagamento -->
-        <section id="ancora">
-            <div class="first section-container">
-                <h2>
+            <section>
+            <div class="payments">
+                <h2 id="ancora">
                     Trova il piano business che fa per te
                 </h2>
                 <label> <input type="radio">Fatturazione mensile</label>
@@ -277,11 +277,11 @@
                     </div>
                 </div>
             </div>
-        </section>
+            </section>
 
         <!-- Seconda sezione "Enterprise" -->
-        <section>
-            <div class="second section-container">
+            <section>
+            <div class="enterprise-container">
                 <div class="intestazione2">
                     <span id="icon-plan"><i class="fa-solid fa-building"></i></span>
                     <span>Team</span>
@@ -299,10 +299,10 @@
 
                 </div>
             </div>
-        </section>
+            </section>
 
         <!-- Terza sezione "Partnership" -->
-        <section>
+            <section>
             <div class="third section-container">
                 <div class="t-col1">
                     <img src="../htmlcss-dropbox/img (22)/img/partner.png" alt="">
@@ -319,11 +319,11 @@
                     </div>
                 </div>
             </div>
-        </section>
+            </section>
 
         <!-- Quarta sezione "Operazioni Dropbox Business" -->
-        <section>
-            <div class="fourth section-container">
+            <section>
+            <div class="tool-container">
                 <h2>
                     Esegui pi&ugrave; operazioni con Dropbox Business
                 </h2>
@@ -386,34 +386,34 @@
                     </div>
                 </div>
             </div>
-        </section>
+            </section>
 
         <!-- Quinta sezione "Team" -->
-        <section>
-            <div class="fifth section-container">
+            <section>
+            <div class="users-container">
                 <h2>
                     Pi&ugrave; di 500.000 utilizzano Dropbox Business
                 </h2>
                 <a href="">Scopri di pi&ugrave; sui nostri clienti</a>
             </div>
-        </section>
+            </section>
 
         <!-- Sesta sezione "Designit/Asu ecc" -->
-        <section>
+            <section>
             <div class="sixth section-container">
 
             </div>
-        </section>
+            </section>
 
         <!-- Settima sezione "Dropbox nella tua azienda" -->
-        <section>
+            <section>
 
-        </section>
+            </section>
 
         <!-- Ottava sezione "Domande frequenti" -->
-        <section>
+            <section>
 
-        </section>
+            </section>
         </div>
         
 
