Prove sesta sezione

--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
                             <div class="prova">
                                 <a id="box-button" href="">Prova gratis per 30 giorni</a>
                             </div>
+                            <div class="oppure">
+                                <span>oppure</span>
+                                <a href="">acquista ora</a>
+                                <hr>
+                            </div>
                             <div class="punti-salienti">
                                 <ul>
                                     <li>
@@ -176,6 +181,11 @@
                             </div>
                             <div class="prova">
                                 <a id="box-button" href="">Prova gratis per 30 giorni</a>
+                            </div>
+                            <div class="oppure">
+                                <span>oppure</span>
+                                <a href="">acquista ora</a>
+                                <hr>
                             </div>
                             <div class="punti-salienti">
                                 <ul>
@@ -250,6 +260,11 @@
                             </div>
                             <div class="prova">
                                 <a id="box-button-c" href="">Contattaci</a>
+                            </div>
+                            <div class="oppure">
+                                <span>oppure</span>
+                                <a href="">acquista ora</a>
+                                <hr>
                             </div>
                             <div class="punti-salienti">
                                 <ul>
@@ -400,8 +415,23 @@
 
         <!-- Sesta sezione "Designit/Asu ecc" -->
             <section>
-            <div class="sixth section-container">
-
+            <div class="carousel-container">
+                <div class="right-menu">
+                    <div class="designit">
+                        <img src="../htmlcss-dropbox/img (22)/img/designit.svg" alt="">
+                    </div>
+                    <div class="arizona">
+                        <img src="../htmlcss-dropbox/img (22)/img/arizona_state_university.svg" alt="">
+                    </div>
+                    <div class="uni-florida">
+                        <img src="../htmlcss-dropbox/img (22)/img/university_of_florida.svg" alt="">
+                    </div>
+                    <div class="topps">
+                        <img src="../htmlcss-dropbox/img (22)/img/topps.svg" alt=""> 
+                    </div>
+                </div>
+                <div class="midland-menu"></div>
+                <div class="left-menu"></div>
             </div>
             </section>
 
