completamento dei riquadri della sesta sezione anche se con un problema

--- a/index.html
+++ b/index.html
@@ -417,21 +417,34 @@
             <section>
             <div class="carousel-container">
                 <div class="right-menu">
-                    <div class="designit">
+                    <div class="square-menu designit">
                         <img src="../htmlcss-dropbox/img (22)/img/designit.svg" alt="">
                     </div>
-                    <div class="arizona">
+                    <div class="square-menu arizona">
                         <img src="../htmlcss-dropbox/img (22)/img/arizona_state_university.svg" alt="">
                     </div>
-                    <div class="uni-florida">
+                    <div class="square-menu uni-florida">
                         <img src="../htmlcss-dropbox/img (22)/img/university_of_florida.svg" alt="">
                     </div>
-                    <div class="topps">
+                    <div class="square-menu topps">
                         <img src="../htmlcss-dropbox/img (22)/img/topps.svg" alt=""> 
                     </div>
                 </div>
                 <div class="midland-menu"></div>
-                <div class="left-menu"></div>
+                <div class="left-menu">
+                    <div class="square-menu bicycle">
+                        <img src="../htmlcss-dropbox/img (22)/img/world_bicycle_relief.svg" alt="">
+                    </div>
+                    <div class="square-menu hearst">
+                        <img src="../htmlcss-dropbox/img (22)/img/hearst_corp.svg" alt="">
+                    </div>
+                    <div class="square-menu lonely-planet">
+                        <img src="../htmlcss-dropbox/img (22)/img/lonely_planet.svg" alt="">
+                    </div>
+                    <div class="square-menu channel">
+                        <img src="../htmlcss-dropbox/img (22)/img/clear_channel.svg" alt="">
+                    </div>
+                </div>
             </div>
             </section>
 
