parte centrale sesta sezione

--- a/index.html
+++ b/index.html
@@ -430,7 +430,23 @@
                         <img src="../htmlcss-dropbox/img (22)/img/topps.svg" alt=""> 
                     </div>
                 </div>
-                <div class="midland-menu"></div>
+                <div class="midland-menu">
+                    <div class="mid-cont">
+                        <div class="mid.title">
+                            <h2>
+                                Designit
+                            </h2>
+                            <p>a <span>wipro</span> company</p>
+                        </div>
+                        <hr>
+                        <div class="mid paragraph">
+                            <p>
+                                &quot;I membri del nostro team lavorano costantemente in Paese, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna &egrave; facile quanto Dropbox Paper.
+                            </p>
+                            <span>Morten Thomsen, Global IT Lead</span>
+                        </div>
+                    </div>
+                </div>
                 <div class="left-menu">
                     <div class="square-menu bicycle">
                         <img src="../htmlcss-dropbox/img (22)/img/world_bicycle_relief.svg" alt="">
