correzione derivazione foto e piccole parti di scrittura del codice

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <!-- Strutturazione header e jumbotron -->
     <header>
-        <header class="topbar">
-            <div class="container-topbar">
+        <nav class="topbar">
+            <section class="container-topbar">
                 <div class="right stuff">
-                    <img src="../htmlcss-dropbox/img (22)/img/logo-small.png" alt="">
+                    <img src="img/logo-small.png" alt="">
                    <a href="pd">Perch&eacute; Dropbox</a>
                    <a href="pd">Funzioni</a>
                    <a href="pd">Piani e prezzi</a>
@@ -31,10 +31,10 @@
                     <a id="inizia" href="pd">Inizia</a>
                 </div>
 
-            </div>
+            </section>
 
-        </header>
-        <header class="jumbotron">
+        </nav>
+        <div class="jumbotron">
             <div class="jumbotron-container">
                 <div class="jb-text">
                     <h1>
@@ -51,13 +51,13 @@
                         <a href="#ancora" id="arrow"><i class="fa-solid fa-arrow-down"></i></a> 
                     </div>
                     <div class="jb-col2">
-                        <img src="../htmlcss-dropbox/img (22)/img/jumbo.png" alt="">
+                        <img src="img/jumbo.png" alt="">
                     </div>
                 </div>
 
             </div>
 
-        </header>
+        </div>
     </header>
 
 
@@ -320,7 +320,7 @@
             <section>
             <div class="partner-container">
                 <div class="t-col1">
-                    <img src="../htmlcss-dropbox/img (22)/img/partner.png" alt="">
+                    <img src="img/partner.png" alt="">
                 </div>
                 <div class="t-col2">
                     <div class="tcol2-text">
@@ -344,7 +344,7 @@
                 </h2>
                 <div class="cards-line1">
                     <div class="card">
-                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-switching-tools.png" alt="">
+                        <img src="img/business-feature-switching-tools.png" alt="">
                         <h4>
                             Passa di meno da uno strumento all&apos;altro
                         </h4>
@@ -353,7 +353,7 @@
                         </p>
                     </div>
                     <div class="card">
-                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-send-files-it.png" alt="">
+                        <img src="img/business-feature-send-files-it.png" alt="">
                         <h4>
                             Passa di meno da uno strumento all&apos;altro
                         </h4>
@@ -362,7 +362,7 @@
                         </p>
                     </div>
                     <div class="card">
-                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-coordinate-it.png" alt="">
+                        <img src="img/business-feature-coordinate-it.png" alt="">
                         <h4>
                             Passa di meno da uno strumento all&apos;altro
                         </h4>
@@ -373,7 +373,7 @@
                 </div>
                 <div class="cards-line2">
                     <div class="card">
-                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-integrations-it.png" alt="">
+                        <img src="img/business-feature-integrations-it.png" alt="">
                         <h4>
                             Passa di meno da uno strumento all&apos;altro
                         </h4>
@@ -382,7 +382,7 @@
                         </p>
                     </div>
                     <div class="card">
-                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-multi-device.png" alt="">
+                        <img src="img/business-feature-multi-device.png" alt="">
                         <h4>
                             Passa di meno da uno strumento all&apos;altro
                         </h4>
@@ -391,7 +391,7 @@
                         </p>
                     </div>
                     <div class="card">
-                        <img src="../htmlcss-dropbox/img (22)/img/business-feature-security.png" alt="">
+                        <img src="img/business-feature-security.png" alt="">
                         <h4>
                             Passa di meno da uno strumento all&apos;altro
                         </h4>
@@ -416,18 +416,18 @@
         <!-- Sesta sezione "Designit/Asu ecc" -->
             <section>
             <div class="carousel-container">
-                <div class="right-menu">
+                <div class="left-menu">
                     <div class="square-menu designit">
-                        <img src="../htmlcss-dropbox/img (22)/img/designit.svg" alt="">
+                        <img src="img/designit.svg" alt="">
                     </div>
                     <div class="square-menu arizona">
-                        <img src="../htmlcss-dropbox/img (22)/img/arizona_state_university.svg" alt="">
+                        <img src="img/arizona_state_university.svg" alt="">
                     </div>
-                    <div class="square-menu uni-florida">
-                        <img src="../htmlcss-dropbox/img (22)/img/university_of_florida.svg" alt="">
+                    <div class="uni-florida">
+                        <img src="img/university_of_florida.svg" alt="">
                     </div>
                     <div class="square-menu topps">
-                        <img src="../htmlcss-dropbox/img (22)/img/topps.svg" alt=""> 
+                        <img src="img/topps.svg" alt=""> 
                     </div>
                 </div>
                 <div class="midland-menu">
@@ -436,10 +436,12 @@
                             <h2>
                                 Designit
                             </h2>
-                            <p>a <span>wipro</span> company</p>
+                            <div class="subtext">
+                                a <strong>wipro</strong> company
+                            </div>
                         </div>
                         <hr>
-                        <div class="mid paragraph">
+                        <div class="mid-paragraph">
                             <p>
                                 &quot;I membri del nostro team lavorano costantemente in Paese, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna &egrave; facile quanto Dropbox Paper.
                             </p>
@@ -447,18 +449,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="left-menu">
+                <div class="right-menu">
                     <div class="square-menu bicycle">
-                        <img src="../htmlcss-dropbox/img (22)/img/world_bicycle_relief.svg" alt="">
+                        <img src="img/world_bicycle_relief.svg" alt="">
                     </div>
                     <div class="square-menu hearst">
-                        <img src="../htmlcss-dropbox/img (22)/img/hearst_corp.svg" alt="">
+                        <img src="img/hearst_corp.svg" alt="">
                     </div>
                     <div class="square-menu lonely-planet">
-                        <img src="../htmlcss-dropbox/img (22)/img/lonely_planet.svg" alt="">
+                        <img src="img/lonely_planet.svg" alt="">
                     </div>
                     <div class="square-menu channel">
-                        <img src="../htmlcss-dropbox/img (22)/img/clear_channel.svg" alt="">
+                        <img src="img/clear_channel.svg" alt="">
                     </div>
                 </div>
             </div>
